# uchile_common

./: .gitignore
control_util/src/control_util/: pid.py
uchile_gazebo/: .gitignore  CMakeLists.txt  package.xml
uchile_gazebo/install/: install_models.sh
uchile_gazebo/scripts/: spawn_objects_robocup_2019_home_arena  spawn_objects_robocup_2021  spawn_objects_stage
uchile_gazebo/worlds/: lab.world  robocup19_home_arena.world  robocup_2019_home_arena.world  robocup_2021.world  stage.world
uchile_grasping/: CMakeLists.txt  package.xml
uchile_msgs/: CMakeLists.txt
uchile_msgs/msg/: AnimalCard.msg  ImageArray.msg  SkeletonWeb.msg  StringArray.msg
uchile_object_detection/: CMakeLists.txt  package.xml
uchile_object_detection/scripts/: detection.py
uchile_sensors/: CMakeLists.txt  package.xml
uchile_sensors/meshes/: .gitignore
uchile_sensors/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro
uchile_srvs/: CMakeLists.txt
uchile_srvs/srv/: DepthDetection.srv  GetShelfPose.srv  ImageRecognition.srv  ImageReport.srv  PersonDetection.srv  PersonRecognition.srv  RosbagRecord.srv  StringArray.srv  TableDetector.srv
uchile_tf/: CMakeLists.txt  package.xml
uchile_tf/calibration/: calibration_1498252745.yaml  calibration_1498258152.yaml  calibration_1498259733.yaml  calibration_1498263798.yaml  calibration_1499298262.yaml  calibration_1499303821.yaml  calibration_1499452080.yaml
uchile_tf/include/uchile_tf/: pose_transformer.h  pose_transformer_node.h
uchile_tf/launch/: bender_static_tf.launch  tf_model.launch  transformers.launch
uchile_tf/scripts/: load_calibration  save_calibration
uchile_tf/src/: dynamic_joint_state_listener.cpp  pose_transformer.cpp  pose_transformer_node.cpp
uchile_tf/test/: pose_transformer.test  pose_transformer_node_test.cpp  pose_transformer_node_test.launch  pose_transformer_test.cpp
uchile_util/: CMakeLists.txt  setup.py
uchile_util/config/mapper/: ObjectInformation.yaml  TablesInformation.yaml  mapper.yaml  mapper_2017.yaml  mapper_old.yaml
uchile_util/config/rviz/: common.rviz
uchile_util/launch/: mapper.launch
