<?xml version="1.0"?>
<package format="2">
  <!-- package information -->
  <name>uchile_tf</name>
  <version>2.0.0</version>
  <description>The uchile_tf package.</description>
  <maintainer email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</maintainer>
  <author email="bender.devel@gmail.com">Bender Team - UChile Homebreakers</author>
  <license>TODO</license>
  <url type="website">http://robotica-uchile.amtc.cl/</url>
  <url type="bugtracker">https://github.com/uchile-robotics/uchile_common/issues</url>
  <url type="repository">https://github.com/uchile-robotics/uchile_common</url>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>catkin</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend version_gte="1.3.0">orocos_kdl</depend>
  <depend>roscpp</depend>
  <depend>rostime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>uchile_srvs</depend>
  <depend>uchile_msgs</depend>
</package>
